fixed tour pictures to wrap

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -191,6 +191,7 @@ nav {
 .tour {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
